add mockserver(unended) install zustand(made store.ts with fetching mock server(uctually)) a few diffs in header

--- a/src/blocks/header/Header.module.scss
+++ b/src/blocks/header/Header.module.scss
@@ -4,13 +4,14 @@
   padding: 3rem;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   gap: 5px;
   .header__logo{
     color: v.$textCL;
   }
-  .header__item{
+  .header__moon{
     color: v.$textCL;
     font-size: 25px;
+    cursor: pointer;
   }
 }
